OCT 31 2021
	Client update.
	
	New Scripts:
		FarmBankEverything -- Banks everything on the account then quits client.
		BankGetBankItems -- Prints what is inside the bank then quits client.
		FarmMassAcceptShantay -- Accepts all items at Shantay and then banks them. Waits for a trade.
		FarmTradeEverything -- Opens bank and trades everything inside bank to account specified in arguments. To be used with FarmMassAcceptShantay.
	
	Bugfixes:
		Coleslaw flickering fix.
		Trade interrupts were broken somehow, now they're fixed.
		S_Certer now properly handles bars in Draynor.
		controller.log() now doesn't print twice to stdout
		

OCT 25 2021 -- *** Staking Pumpkins Edition ***
	Player HP indicators added!
	Item switcher added!
		F5 => Attack
		F6 => Strength
		F7 => Defence
		
		Set via command line in your bat/sh file:
			--attack-items 123,456
			--strength-items 123,456
			--defence-items 123,456
	Spell caster added!
		F8 to cast. 
		
		Set via command line in your bat/sh file:
			--spell-id 2
			
	
	Objects and NPCs will now show their IDs upon right clicking.
	The inert "Settings" button has been replaced with a "PathWalker" button. This button conveniently launches PathWalker for manual playing!
	
	Bugfixes:
		Last release broke running PathWalker. Sorry about that!
		getPlayerAtCoord(x,y) no longer returns the local player.

OCT 24 2021
	Script breaks:
		Should be no breaks this update, if there are any, please let me know!

	APOS Scripts:
		Quester_F2P -- Bugs ironed out, script is ready! Thanks Cleaned!
		Updated PathWalker to Kristof's gate edits.
		
	New IdleRSC API calls:
		atWallObject and atWallObject2, in case your script needs functionality which is not openDoor(x,y) friendly.
			If you can, try to add it to openDoor(x,y) and submit a pull request, would appreciate it. It's much nicer to script with!
		
	Bugfixes:
		APOS compatibility
			useOnNpc now will use correct pathfinding when using item on an npc. Before, it would get stuck on walls.