@@ -1,3 +1,14 @@
+NOV XXXXXXXXXXXXXXXXXXXXXXXX 2021
+	API Changes
+		*** logout() will no longer set auto login to false. ***
+		 
+	New Scripts:
+		FarmGetInventoryItems -- prints items in the account.
+		
+
+	Bugfixes:
+		SmithingVarrock had a glitch which caused it not to bank.
+
 OCT 31 2021
 	Client update.
 	
